[package]
name = "hitherhost"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = { version = "4.5.34", features = ["derive"] }
futures = "0.3.31"
reqwest = "0.12.15"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net"] }
tokio-rustls = "0.26.2"
